--- a/HolidayHousings/templates/housing-detail.html
+++ b/HolidayHousings/templates/housing-detail.html
@@ -75,6 +75,16 @@
                             {% csrf_token %}
                             <button type="submit" class="vote-button">Report</button>
                         </form>
+                            {% if request.user.is_staff %}
+                            <form method="post" action="{% url 'delete-comment' comment.pk %}" style="display:inline;">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+                            </form>
+                            <form method="post" action="{% url 'deactivate-comment' comment.pk %}" style="display:inline;">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-sm btn-warning">Deactivate</button>
+                            </form>
+                        {% endif %}
                         </div>
                     </li>
                 {% endfor %}
