--- a/HolidayHousings/templates/housing-list.html
+++ b/HolidayHousings/templates/housing-list.html
@@ -4,6 +4,10 @@
             font-family: 'Arial', sans-serif;
             background-color: #f7f7f7; /* Hellgrauer Hintergrund */
             color: #333; /* Dunkelgraue Textfarbe */
+            line-height: 1.6; /* Zeilenhöhe für bessere Lesbarkeit */
+            font-size: 16px; /* Grundlegende Schriftgröße */
+            margin: 0; /* Null Rand, um den Körper zu begrenzen */
+            padding: 0; /* Null Padding, um den Körper zu begrenzen */
         }
 
         .container {
@@ -19,6 +23,7 @@
             color: #007bff; /* Blaue Überschrift */
             margin-bottom: 20px;
             text-align: center;
+            font-size: 24px; /* Größere Überschrift */
         }
 
         .housing-item {
@@ -31,7 +36,8 @@
         }
 
         .housing-item p {
-            margin: 5px 0;
+            margin: 10px 0; /* Größerer Abstand zwischen den Absätzen */
+            font-size: 14px; /* Kleinere Schriftgröße für Details */
         }
 
         .housing-item img {
@@ -53,6 +59,7 @@
             margin-right: 10px;
             font-weight: bold;
             color: #555; /* Dunkelgrauer Text für Labels */
+            font-size: 14px; /* Kleinere Schriftgröße für Labels */
         }
 
         .housing-item form input[type="number"] {
@@ -60,7 +67,7 @@
             padding: 8px;
             border: 1px solid #ccc;
             border-radius: 3px;
-            font-size: 14px;
+            font-size: 14px; /* Kleinere Schriftgröße für Eingabefelder */
         }
 
         .housing-item form button {
@@ -70,7 +77,7 @@
             border: none;
             border-radius: 3px;
             cursor: pointer;
-            font-size: 14px;
+            font-size: 14px; /* Kleinere Schriftgröße für Schaltflächen */
             transition: background-color 0.3s ease;
         }
 
@@ -83,6 +90,7 @@
             font-weight: bold;
             text-align: center;
             margin-top: 10px;
+            font-size: 14px; /* Kleinere Schriftgröße für Fehlermeldungen */
         }
     </style>
 {% endblock %}
